--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Teste de Interface - Encontre o Bug!</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="bugged.css">
 </head>
 <body>
   <div class="container">
