--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <input type="text" id="email" placeholder="Digite seu email" />
 
       <label for="senha">Senha:</label>
-      <input type="password" id="senha" placeholder="Digite sua senha" />
+      <input type="text" id="senha" placeholder="Digite sua senha" />
 
       <button id="login-btn">Entrar</button>
     </div>
